test/sema/typeck/lambda/variadic-generic-wrong-argument.dora
fn invoke[T](f: (T...): T, value: T): T {
    f(value, false)
}
